--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,4 +1,6 @@
 /* applies to anything of class "example-class-selector" */
+@import url(https://fonts.googleapis.com/css?family=Lobster+Two|Lato);
+
 .example-class-selector {
 	margin-top: 2em;
 }
@@ -14,6 +16,9 @@
 body {
      border: 1px dotted gray;
      padding: 20px;
+     background-color: #4ED6FF;
+     font-family: 'Lato', sans-serif;
+     text-align: center;
 }
 
 .jumbotron {
@@ -23,12 +28,38 @@ body {
 
 .jumbotron:after {
      content:"";
-     background: url("http://lorempixel.com/1140/283");
+     background: url("http://animaciatop.ru/pictures/fon/fon-137.gif");
      opacity: 0.2;
      top: 0;
      left: 0;
      bottom: 0;
      right: 0;
      position: absolute;
-     z-index: -1;	
+     z-index: -1;
+}
+
+.jumbotron h1 {
+     color: #ffffff;
+     font-family: 'Lobster Two', sans-serif;
+}
+
+h2 {
+     font-family: 'Lato';
+     color: #ffffff;
+}
+
+.thumbnail {
+     background-color: #36BDFA;
+     border: none;
+}
+
+.project p {
+     text-align: center;
+     color: #333333;
+     font-size: 1.5em;
+     margin-top: 10px;
+}
+
+.project img {
+     margin-top: 10px;
 }
